--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <button id="good-button" class="btn btn-outline-primary btn-sm rounded-pill buttons">YES</button>
     <div class="popup">
       <h2>You are the love of my life sz</h2>
+      <p>I love you more than anythiiiiing!</p>
     </div>
   </section>
   <canvas id="my-canvas"></canvas>
