--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <button id="evil-button" class="btn btn-danger btn-lg buttons">NO</button>
     <button id="good-button" class="btn btn-outline-primary btn-sm rounded-pill buttons">YES</button>
     <div class="popup">
-      <h2>You are the love of my life sz</h2>
-      <p>I love you more than anythiiiiing!</p>
+      <h2>I LOVE YOU MORE THAN ANYTHIIIIING</h2>
     </div>
   </section>
   <canvas id="my-canvas"></canvas>
